Misc. improvements to the LMW code.  Support for emitting all sites, regardless of genotype.  Min and max quality scores.
git-svn-id: file:///humgen/gsa-scr1/gsa-engineering/svn_contents/trunk@2411 348d0f76-0448-11de-a6fe-93d51630548a